# research_portfolio

./: .gitignore  README.md  _codeql_detected_source_root
cpp-trading-engine/: CMakeLists.txt  README.md
cpp-trading-engine/_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_matching_engine  test_order_book
cpp-trading-engine/include/: matching_engine.hpp  order.hpp  order_book.hpp  risk_manager.hpp  types.hpp
cpp-trading-engine/src/: matching_engine.cpp  order_book.cpp  risk_manager.cpp
cpp-trading-engine/tests/: test_matching_engine.cpp  test_order_book.cpp
research-notebooks/: 01_momentum_strategy.ipynb  02_mean_reversion_strategy.ipynb  03_volatility_clustering_research.ipynb  README.md
